--- a/styles/favorites/index.module.scss
+++ b/styles/favorites/index.module.scss
@@ -11,7 +11,7 @@
       align-items: flex-start;
       position: relative;
       padding-bottom: 25px;
-      border-bottom: 1px solid #2A323F;
+      border-bottom: 1px solid #047411;
       margin-bottom: 25px;
 
       @media (max-width: 485px) {
